language/move-lang/tests/move_check/typing/exp_list_resource_drop.move
module M {
    resource struct R<T> {}
    struct S {}
    struct Box<T> {}

    t0() {
        (0, S{}, R<u64> {});
        (0, S{}, Box<R<u64>> {});
        (0, S{}, Box {});
    }

}
